:bug: fix country for french dataset
using reverse geocoding to determine country of origin of french sheeps

--- a/notebooks/exploratory/0.8.0-bunop-describe-French-sheep.ipynb
+++ b/notebooks/exploratory/0.8.0-bunop-describe-French-sheep.ipynb
@@ -16,16 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
     "import csv\n",
     "import itertools\n",
     "\n",
     "from collections import Counter\n",
-    "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "from plinkio import plinkfile\n",
+    "from geopy.geocoders import Nominatim\n",
+    "from geopy.extra.rate_limiter import RateLimiter\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
+    "from src.features.utils import countries\n",
     "from src.features.smarterdb import VariantSheep, global_connection, Dataset"
    ]
   },
@@ -45,7 +47,8 @@
    "outputs": [],
    "source": [
     "global_connection()\n",
-    "dataset = Dataset.objects.filter(file=\"High density genotypes of French Sheep populations.zip\").get()"
+    "dataset = Dataset.objects.filter(file=\"High density genotypes of French Sheep populations.zip\").get()\n",
+    "tqdm.pandas()"
    ]
   },
   {
@@ -66,11 +69,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/frenchsheep_HD.bed\n",
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/Populations_infos.xlsx\n",
       "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/info.txt\n",
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/OAR3\n",
       "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/frenchsheep_HD.bim\n",
-      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/frenchsheep_HD.fam\n",
-      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/Populations_infos.xlsx\n"
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/Populations_infos_fix.xlsx\n",
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/frenchsheep_HD.bed\n",
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/OAR4\n",
+      "/home/paolo/Projects/SMARTER-database/data/interim/604f75a61a08c53cebd09b58/frenchsheep_HD.fam\n"
      ]
     }
    ],
@@ -141,7 +147,6 @@
        "      <th>Color</th>\n",
        "      <th>POP_GROUP_CODE</th>\n",
        "      <th>POP_GROUP_NAME</th>\n",
-       "      <th>Unnamed: 8</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -155,7 +160,6 @@
        "      <td>NaN</td>\n",
        "      <td>NORTH</td>\n",
        "      <td>NORTH</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -167,7 +171,6 @@
        "      <td>NaN</td>\n",
        "      <td>SOUTH</td>\n",
        "      <td>SOUTH</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -179,7 +182,6 @@
        "      <td>NaN</td>\n",
        "      <td>SOUTH</td>\n",
        "      <td>SOUTH</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -191,7 +193,6 @@
        "      <td>NaN</td>\n",
        "      <td>NORTH</td>\n",
        "      <td>NORTH</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -203,7 +204,6 @@
        "      <td>NaN</td>\n",
        "      <td>NORTH</td>\n",
        "      <td>NORTH</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -224,12 +224,12 @@
        "3  http://en.france-genetique-elevage.org/Charoll...  46.435442   4.277004   \n",
        "4  http://en.france-genetique-elevage.org/Charmoi...  47.390249   1.254324   \n",
        "\n",
-       "   Color POP_GROUP_CODE POP_GROUP_NAME  Unnamed: 8  \n",
-       "0    NaN          NORTH          NORTH         NaN  \n",
-       "1    NaN          SOUTH          SOUTH         NaN  \n",
-       "2    NaN          SOUTH          SOUTH         NaN  \n",
-       "3    NaN          NORTH          NORTH         NaN  \n",
-       "4    NaN          NORTH          NORTH         NaN  "
+       "   Color POP_GROUP_CODE POP_GROUP_NAME  \n",
+       "0    NaN          NORTH          NORTH  \n",
+       "1    NaN          SOUTH          SOUTH  \n",
+       "2    NaN          SOUTH          SOUTH  \n",
+       "3    NaN          NORTH          NORTH  \n",
+       "4    NaN          NORTH          NORTH  "
       ]
      },
      "execution_count": 5,
@@ -277,8 +277,7 @@
     "            counter.update([variant.name])\n",
     "            location = next(filter(lambda loc: loc.imported_from == \"SNPchiMp v.3\", variant.locations))\n",
     "            if line[0] != location.chrom or int(line[3]) != location.position:\n",
-    "                print(f\"snp {line[1]} with different positions: {line[0]}:{line[3]}<>{location.chrom}:{location.position}\")\n",
-    "                "
+    "                print(f\"snp {line[1]} with different positions: {line[0]}:{line[3]}<>{location.chrom}:{location.position}\")\n"
    ]
   },
   {
@@ -369,138 +368,138 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CDL</td>\n",
-       "      <td>Causses du Lot</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TEX</td>\n",
-       "      <td>Texel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SUF</td>\n",
-       "      <td>Suffolk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CHR</td>\n",
-       "      <td>Charmoise</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ROM</td>\n",
-       "      <td>Romanov</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>COR</td>\n",
-       "      <td>Corse</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>RWE</td>\n",
-       "      <td>Rouge de l'Ouest</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TAR</td>\n",
-       "      <td>Tarasconnaise</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>LAC</td>\n",
-       "      <td>Lacaune (milk)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>RAV</td>\n",
-       "      <td>Rava</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>LAM</td>\n",
-       "      <td>Lacaune (meat)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>RAM</td>\n",
-       "      <td>Mérinos de Rambouillet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>BER</td>\n",
-       "      <td>Berrichon du Cher</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>OUE</td>\n",
-       "      <td>Ouessant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>MOU</td>\n",
-       "      <td>Mourerous</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>BMC</td>\n",
-       "      <td>Blanc du Massif Central</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>LIM</td>\n",
-       "      <td>Limousine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>EUR</td>\n",
-       "      <td>European Mouflon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>NVE</td>\n",
-       "      <td>Noire du Velay</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>MER</td>\n",
-       "      <td>Mérinos d'Arles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>CHA</td>\n",
-       "      <td>Mouton Charollais</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>ROU</td>\n",
-       "      <td>Roussin de la Hague</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
        "      <td>IDF</td>\n",
        "      <td>Île de France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>1</th>\n",
+       "      <td>ROM</td>\n",
+       "      <td>Romanov</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CDL</td>\n",
+       "      <td>Causses du Lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUF</td>\n",
+       "      <td>Suffolk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LAC</td>\n",
+       "      <td>Lacaune (milk)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>MER</td>\n",
+       "      <td>Mérinos d'Arles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>PAS</td>\n",
        "      <td>Préalpes du Sud</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>VEN</td>\n",
-       "      <td>Mouton Vendéen</td>\n",
+       "      <th>7</th>\n",
+       "      <td>MTR</td>\n",
+       "      <td>Manech Tête Rouge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>8</th>\n",
+       "      <td>LAM</td>\n",
+       "      <td>Lacaune (meat)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>OUE</td>\n",
+       "      <td>Ouessant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ROU</td>\n",
+       "      <td>Roussin de la Hague</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>LIM</td>\n",
+       "      <td>Limousine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CHA</td>\n",
+       "      <td>Mouton Charollais</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
        "      <td>RMN</td>\n",
        "      <td>Romane</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>TAR</td>\n",
+       "      <td>Tarasconnaise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>European Mouflon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NVE</td>\n",
+       "      <td>Noire du Velay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>MOU</td>\n",
+       "      <td>Mourerous</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>COR</td>\n",
+       "      <td>Corse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>TEX</td>\n",
+       "      <td>Texel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>RAM</td>\n",
+       "      <td>Mérinos de Rambouillet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>RAV</td>\n",
+       "      <td>Rava</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>RWE</td>\n",
+       "      <td>Rouge de l'Ouest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>CHR</td>\n",
+       "      <td>Charmoise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>BMC</td>\n",
+       "      <td>Blanc du Massif Central</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>BER</td>\n",
+       "      <td>Berrichon du Cher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>MTR</td>\n",
-       "      <td>Manech Tête Rouge</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>Mouton Vendéen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -508,33 +507,33 @@
       ],
       "text/plain": [
        "   Code          Population Name\n",
-       "0   CDL           Causses du Lot\n",
-       "1   TEX                    Texel\n",
-       "2   SUF                  Suffolk\n",
-       "3   CHR                Charmoise\n",
-       "4   ROM                  Romanov\n",
-       "5   COR                    Corse\n",
-       "6   RWE         Rouge de l'Ouest\n",
-       "7   TAR            Tarasconnaise\n",
-       "8   LAC           Lacaune (milk)\n",
-       "9   RAV                     Rava\n",
-       "10  LAM           Lacaune (meat)\n",
-       "11  RAM   Mérinos de Rambouillet\n",
-       "12  BER        Berrichon du Cher\n",
-       "13  OUE                 Ouessant\n",
-       "14  MOU                Mourerous\n",
-       "15  BMC  Blanc du Massif Central\n",
-       "16  LIM                Limousine\n",
-       "17  EUR         European Mouflon\n",
-       "18  NVE           Noire du Velay\n",
-       "19  MER          Mérinos d'Arles\n",
-       "20  CHA        Mouton Charollais\n",
-       "21  ROU      Roussin de la Hague\n",
-       "22  IDF            Île de France\n",
-       "23  PAS          Préalpes du Sud\n",
-       "24  VEN           Mouton Vendéen\n",
-       "25  RMN                   Romane\n",
-       "26  MTR        Manech Tête Rouge"
+       "0   IDF            Île de France\n",
+       "1   ROM                  Romanov\n",
+       "2   CDL           Causses du Lot\n",
+       "3   SUF                  Suffolk\n",
+       "4   LAC           Lacaune (milk)\n",
+       "5   MER          Mérinos d'Arles\n",
+       "6   PAS          Préalpes du Sud\n",
+       "7   MTR        Manech Tête Rouge\n",
+       "8   LAM           Lacaune (meat)\n",
+       "9   OUE                 Ouessant\n",
+       "10  ROU      Roussin de la Hague\n",
+       "11  LIM                Limousine\n",
+       "12  CHA        Mouton Charollais\n",
+       "13  RMN                   Romane\n",
+       "14  TAR            Tarasconnaise\n",
+       "15  EUR         European Mouflon\n",
+       "16  NVE           Noire du Velay\n",
+       "17  MOU                Mourerous\n",
+       "18  COR                    Corse\n",
+       "19  TEX                    Texel\n",
+       "20  RAM   Mérinos de Rambouillet\n",
+       "21  RAV                     Rava\n",
+       "22  RWE         Rouge de l'Ouest\n",
+       "23  CHR                Charmoise\n",
+       "24  BMC  Blanc du Massif Central\n",
+       "25  BER        Berrichon du Cher\n",
+       "26  VEN           Mouton Vendéen"
       ]
      },
      "execution_count": 9,
@@ -546,11 +545,103 @@
     "merged = pd.merge(fids,infos, on=\"Code\")\n",
     "merged.loc[:, [\"Code\", \"Population Name\"]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7220409b",
+   "metadata": {},
+   "source": [
+    "## Check dataset countries\n",
+    "Test for sample countries of origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2172d87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "516b2e83934c4e53ab5cf07b370a2684",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/27 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# add a column for the query\n",
+    "infos[\"coordinates\"] = infos[\"Latitude\"].map(str) + \", \" + infos[\"Longitude\"].map(str)\n",
+    "\n",
+    "# define the reverse geocoding\n",
+    "locator = Nominatim(user_agent=\"myGeocoder\", timeout=10)\n",
+    "rgeocode = RateLimiter(locator.reverse, min_delay_seconds=0.1)\n",
+    "def get_country(coordinate):\n",
+    "    data = rgeocode(coordinate, language=\"English\")\n",
+    "    if data:\n",
+    "        country_code = data.raw['address']['country_code']\n",
+    "        return countries.get(alpha_2=country_code).name\n",
+    "    else:\n",
+    "        return data\n",
+    "\n",
+    "# find countries\n",
+    "infos[\"Country\"] = infos[\"coordinates\"].progress_apply(get_country)\n",
+    "\n",
+    "# drop the coordinates column\n",
+    "infos.drop('coordinates', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3600ec5f",
+   "metadata": {},
+   "source": [
+    "manipulate dataframe and save the final dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "977ff8a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "infos[\"Species\"] = \"Ovis aries\"\n",
+    "infos.loc[infos['Population Name'] == \"European Mouflon\", \"Species\"] = \"Ovis aries musimon\"\n",
+    "infos.loc[infos['Population Name'] == \"European Mouflon\", \"Population Name\"] = \"European mouflon\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca3fc177",
+   "metadata": {},
+   "source": [
+    "Fix also the `Mérinos d'Arles` code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "09a885d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infos.loc[infos['Population Name'] == \"Mérinos d'Arles\", \"Code\"] = \"ARL\"\n",
+    "infos.to_excel(dataset.working_dir / \"Populations_infos_fix.xlsx\", index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -564,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
