:monocle_face: a different approach to represent IBS NJ trees

--- a/notebooks/results/0.6.0-bunop-ibs_nj-trees.ipynb
+++ b/notebooks/results/0.6.0-bunop-ibs_nj-trees.ipynb
@@ -31,17 +31,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
+    "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.spatial.distance import pdist, squareform\n",
-    "from scipy.cluster.hierarchy import linkage, to_tree\n",
-    "import plotly.graph_objects as go\n",
-    "from ete3 import Tree, TreeStyle, NodeStyle, TextFace\n",
+    "from skbio import DistanceMatrix\n",
+    "from skbio.tree import nj\n",
     "\n",
-    "from src.features.utils import get_project_dir\n",
-    "from src.features.smarterdb import global_connection, SampleSheep"
+    "from src.features.utils import get_project_dir"
    ]
   },
   {
@@ -50,19 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = global_connection()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load IBS data from PLINK\n",
     "dtype_dict = {'IID1': str, 'IID2': str, 'DST': float}\n",
     "ibs_data = pd.read_csv(\n",
-    "    get_project_dir() / \"notebooks/results/SMARTER-OA-OAR3-top-0.4.10/ibs_output.genome.gz\",\n",
+    "    get_project_dir() / \"notebooks/results/SMARTER-OA-OAR3-top-0.4.10/5_breeds-0-50K.ibs.genome.gz\",\n",
     "    sep=r'\\s+',\n",
     "    usecols=['IID1', 'IID2', 'DST'],\n",
     "    dtype=dtype_dict\n",
@@ -71,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +95,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we have the distance matrix and the corresponding sample IDs\n",
+    "print(f\"Distance matrix shape: {distance_matrix.shape}\")\n",
+    "print(f\"Number of samples: {len(individuals)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate NJ tree using hierarchical clustering (same as before)\n",
-    "condensed_dist = squareform(distance_matrix)\n",
-    "Z = linkage(condensed_dist, method='average')\n",
-    "tree = to_tree(Z, rd=False)"
+    "# Create skbio DistanceMatrix\n",
+    "dm = DistanceMatrix(distance_matrix, individuals)"
    ]
   },
   {
@@ -124,15 +120,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete unused variables to free memory\n",
-    "del dtype_dict, ibs_data, ibs_pivot, upper_triangular_matrix, condensed_dist, Z"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Generate a tree structure"
+    "# Deleting all variables except `dm`\n",
+    "del distance_matrix\n",
+    "del dtype_dict\n",
+    "del ibs_data\n",
+    "del ibs_pivot\n",
+    "del individuals\n",
+    "del upper_triangular_matrix"
    ]
   },
   {
@@ -141,47 +135,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_newick(node, newick, parentdist, leaf_names):\n",
-    "    if node.is_leaf():\n",
-    "        return \"%s:%f%s\" % (leaf_names[node.id], parentdist - node.dist, newick)\n",
-    "    else:\n",
-    "        if len(newick) > 0:\n",
-    "            newick = \"):%f%s\" % (parentdist - node.dist, newick)\n",
-    "        else:\n",
-    "            newick = \");\"\n",
-    "        newick = get_newick(node.get_left(), newick, node.dist, leaf_names)\n",
-    "        newick = get_newick(node.get_right(), \",%s\" % (newick), node.dist, leaf_names)\n",
-    "        return \"(%s\" % (newick)\n",
-    "\n",
-    "newick_tree = get_newick(tree, \"\", tree.dist, individuals)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that you have the NJ tree in Newick format, you can use the ete3 library to visualize it and add breed labels. Get full breed name from the database:"
+    "# Build the Neighbor-Joining Tree\n",
+    "nj_tree = nj(dm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "breed_info = pd.DataFrame(data=json.loads(SampleSheep.objects.all().fields(smarter_id=True, breed=True).to_json()))\n",
-    "breed_info[\"_id\"] = breed_info[\"_id\"].apply(lambda x: x[\"$oid\"])\n",
-    "breed_info = breed_info.set_index(\"_id\")\n",
+    "# Save the tree to a Newick file\n",
+    "nj_tree.write(\"nj_tree.nwk\")\n",
     "\n",
-    "# Merge breed information with the list of individuals\n",
-    "label_dict = dict(zip(breed_info.smarter_id, breed_info.breed))"
+    "# Show the resulting tree in ASCII format\n",
+    "print(nj_tree.ascii_art())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the NJ tree with breed labels:"
+    "### Step 1: Assign Coordinates to Nodes\n",
+    "\n",
+    "First, we need to assign x and y coordinates to each node in the tree.\n",
+    "\n",
+    "* X-coordinate: For leaf nodes, assign x-coordinates evenly spaced along the x-axis. For internal nodes, assign x-coordinates as the average of their children's x-coordinates.\n",
+    "* Y-coordinate: Assign y-coordinates based on the depth (level) of the node in the tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all the leaf nodes and assign x-coordinates\n",
+    "leaves = list(nj_tree.tips())\n",
+    "n_leaves = len(leaves)\n",
+    "for i, leaf in enumerate(leaves):\n",
+    "    leaf.x = i\n",
+    "\n",
+    "# Function to assign x-coordinates to internal nodes\n",
+    "def assign_x(node):\n",
+    "    if node.is_tip():\n",
+    "        return node.x\n",
+    "    else:\n",
+    "        child_xs = [assign_x(child) for child in node.children]\n",
+    "        node.x = sum(child_xs) / len(child_xs)\n",
+    "        return node.x\n",
+    "\n",
+    "assign_x(nj_tree)\n",
+    "\n",
+    "# Function to assign y-coordinates based on depth\n",
+    "def assign_y(node, depth=0):\n",
+    "    node.y = -depth  # Negative depth so that the root is at y=0\n",
+    "    for child in node.children:\n",
+    "        assign_y(child, depth + 1)\n",
+    "\n",
+    "assign_y(nj_tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2: Collect Edges\n",
+    "\n",
+    "We need to collect the parent-child relationships to plot the edges of the tree."
    ]
   },
   {
@@ -190,33 +211,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the tree from the Newick format\n",
-    "t = Tree(newick_tree)\n",
+    "edges = []\n",
     "\n",
-    "# Assign breed labels to the tree tips\n",
-    "for leaf in t:\n",
-    "    leaf_name = leaf.name\n",
-    "    if leaf_name in label_dict:\n",
-    "        leaf.name = label_dict[leaf_name]  # Replace individual ID with breed\n",
+    "def collect_edges(node):\n",
+    "    for child in node.children:\n",
+    "        edges.append((node, child))\n",
+    "        collect_edges(child)\n",
     "\n",
-    "# Style the tree\n",
-    "def render_tree(t):\n",
-    "    ts = TreeStyle()\n",
-    "    ts.show_leaf_name = True  # Show breed labels on the tree\n",
+    "collect_edges(nj_tree)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Prepare Data for Plotly\n",
     "\n",
-    "    # Customize the node style\n",
-    "    nstyle = NodeStyle()\n",
-    "    nstyle[\"fgcolor\"] = \"darkred\"\n",
-    "    nstyle[\"size\"] = 10\n",
-    "\n",
-    "    for leaf in t.iter_leaves():\n",
-    "        leaf.set_style(nstyle)\n",
-    "\n",
-    "    # Show the tree with labels (all external application)\n",
-    "    # t.show(tree_style=ts)\n",
-    "    t.render(\"nj_tree_with_breeds.png\", w=800, units=\"px\", tree_style=ts)\n",
-    "\n",
-    "render_tree(t)"
+    "Create lists of x and y coordinates for the edges and nodes."
    ]
   },
   {
@@ -225,92 +236,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Helper function to convert hierarchical tree to plotly tree format\n",
-    "def add_nodes(node, pos=None, x=0, y=0, width=400, labels={}):\n",
-    "    if pos is None:\n",
-    "        pos = {}\n",
-    "    pos[node.id] = (x, y)\n",
+    "# Prepare edge coordinates\n",
+    "edge_x = []\n",
+    "edge_y = []\n",
+    "for parent, child in edges:\n",
+    "    edge_x += [parent.x, child.x, None]  # None separates traces\n",
+    "    edge_y += [parent.y, child.y, None]\n",
     "\n",
-    "    if node.left:\n",
-    "        pos = add_nodes(node.left, pos=pos, x=x-width/2, y=y-1, width=width/2)\n",
-    "        pos = add_nodes(node.right, pos=pos, x=x+width/2, y=y-1, width=width/2)\n",
+    "# Prepare node coordinates and labels\n",
+    "node_x = []\n",
+    "node_y = []\n",
+    "node_text = []\n",
     "\n",
-    "    return pos\n",
+    "def collect_nodes(node):\n",
+    "    node_x.append(node.x)\n",
+    "    node_y.append(node.y)\n",
+    "    node_text.append(node.name if node.name else '')\n",
     "\n",
-    "# Convert hierarchical tree to positions\n",
-    "positions = add_nodes(tree)"
+    "    for child in node.children:\n",
+    "        collect_nodes(child)\n",
+    "\n",
+    "collect_nodes(nj_tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Create Plotly Traces\n",
+    "\n",
+    "Now, create Plotly traces for edges and nodes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare the edge list\n",
-    "def get_edges(tree, pos):\n",
-    "    edges = []\n",
-    "    if tree.left:\n",
-    "        edges.append((tree.id, tree.left.id))\n",
-    "        edges.extend(get_edges(tree.left, pos))\n",
-    "    if tree.right:\n",
-    "        edges.append((tree.id, tree.right.id))\n",
-    "        edges.extend(get_edges(tree.right, pos))\n",
-    "    return edges\n",
-    "\n",
-    "edges = get_edges(tree, positions)\n",
-    "\n",
-    "# Prepare nodes and edges for Plotly\n",
-    "x_nodes = [positions[i][0] for i in positions]\n",
-    "y_nodes = [positions[i][1] for i in positions]\n",
-    "\n",
-    "# Extract node names from individuals\n",
-    "node_labels = [individuals[i] if i < len(individuals) else f'Node {i}' for i in positions]\n",
-    "\n",
-    "# Prepare edge coordinates for Plotly\n",
-    "x_edges = []\n",
-    "y_edges = []\n",
-    "for edge in edges:\n",
-    "    x_edges += [positions[edge[0]][0], positions[edge[1]][0], None]\n",
-    "    y_edges += [positions[edge[0]][1], positions[edge[1]][1], None]\n",
-    "\n",
-    "# Create the trace for edges (lines)\n",
+    "# Edge trace\n",
     "edge_trace = go.Scatter(\n",
-    "    x=x_edges, y=y_edges,\n",
-    "    line=dict(width=1, color='gray'),\n",
-    "    hoverinfo='none',\n",
-    "    mode='lines'\n",
+    "    x=edge_x, y=edge_y,\n",
+    "    mode='lines',\n",
+    "    line=dict(color='black', width=1),\n",
+    "    hoverinfo='none'\n",
     ")\n",
     "\n",
-    "# Create the trace for nodes (markers)\n",
+    "# Node trace\n",
     "node_trace = go.Scatter(\n",
-    "    x=x_nodes, y=y_nodes,\n",
+    "    x=node_x, y=node_y,\n",
     "    mode='markers+text',\n",
-    "    text=node_labels,\n",
-    "    textposition=\"top center\",\n",
+    "    text=node_text,\n",
+    "    textposition='top center',\n",
     "    hoverinfo='text',\n",
-    "    marker=dict(\n",
-    "        showscale=False,\n",
-    "        color='lightblue',\n",
-    "        size=10,\n",
-    "        line_width=2\n",
-    "    )\n",
-    ")\n",
+    "    marker=dict(color='blue', size=5)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5: Plot the Tree\n",
     "\n",
-    "# Create Plotly figure\n",
-    "fig = go.Figure(data=[edge_trace, node_trace])\n",
-    "\n",
-    "# Customize layout\n",
-    "fig.update_layout(\n",
-    "    showlegend=False,\n",
-    "    hovermode='closest',\n",
-    "    margin=dict(b=0, l=0, r=0, t=0),\n",
-    "    xaxis=dict(showgrid=False, zeroline=False),\n",
-    "    yaxis=dict(showgrid=False, zeroline=False)\n",
-    ")\n",
-    "\n",
-    "# Show interactive tree\n",
-    "fig.show()"
+    "Set up the layout and create the figure."
    ]
   },
   {
@@ -319,7 +308,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_nodes"
+    "layout = go.Layout(\n",
+    "    showlegend=False,\n",
+    "    xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
+    "    yaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
+    "    hovermode='closest',\n",
+    "    margin=dict(b=20,l=5,r=5,t=40)\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=[edge_trace, node_trace], layout=layout)\n",
+    "fig.show()"
    ]
   },
   {
